test/Fail/Issue2985-2.err
Issue2985-2.agda:27.1-29.43: error: [TerminationIssue]
Termination checking failed for the following functions:
  u
Problematic calls:
  λ { .force → u cons }
    (at Issue2985-2.agda:29.21-42)
  u cons
    (at Issue2985-2.agda:29.34-35)
